--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "cra-template": "1.2.0",
+    "firebase": "^9.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.42.1",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
